p3/base/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-playground
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playground
            port:
              number: 8888
